Added settings configuration for gauges

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@ Date: 2019-08-07
   Major Features:
     - Added gui gauges for fuel and speed
   Features:
-    - Added configurable fuel usage setting
+    - Added configurable fuel usage multiplier setting
     - Inventory items remain in their assigned slots on takeoff and landing
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.3
