Filesize reduction and inventory range checking - Reduced filesize by deleting thumbnails - Added range checking when transferring to inventories of differing sizes

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.3
+Date: 2019-09-15
+  Changes:
+    - Added range checking to inventory transfers between different planes
+---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 2019-09-12
   Bugfixes:
