Fixed crash exiting single passenger vehicle

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.4.1
+Date: 2020-1-8
+  Bugfixes:
+    - Fixed crash entering train or any single passenger vehicle
+---------------------------------------------------------------------------------------------------
 Version: 0.4.0
 Date: 2020-1-7
   Features:
