--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.0
+Date: 2020-1-26
+  Features:
+    - Updated to 0.18
+---------------------------------------------------------------------------------------------------
+Version: 0.4.1
+Date: 2020-1-8
+  Bugfixes:
+    - Fixed crash exiting single passenger vehicles
+---------------------------------------------------------------------------------------------------
 Version: 0.4.0
 Date: 2020-1-7
   Features:
