--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 2020-8-14
+  Features:
+    - Updated to 0.1.0
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2020-1-26
   Features:
