--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.1
+Date: 2020-10-24
+  Bugfixes:
+    - Fixed crash taking off if player's force is not of name "player" (https://mods.factorio.com/mod/AircraftRealism/discussion/5f8792825a290fb9bae06216)
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2020-8-14
   Features:
-    - Updated to 0.1.0
+    - Updated to 1.0
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2020-1-26
