--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: 2020-12-11
+  Features:
+    - Updated to 1.1
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2020-11-13
   Bugfixes:
