Fix mod not working in sandbox mode

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+Date: 2021-04-19
+  Features:
+    - Fix mod not working in sandbox mode #11
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 2020-12-11
   Features:
