--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.2
+Date: 2021-08-07
+  Bugfixes:
+    - Fixed crash trying to transfer over non shield equipment
+---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2021-08-01
   Bugfixes:
