--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.3
+Date: 2021-10-13
+  Bugfixes:
+    - Fixed crash with AAI Programmable Vehicles (https://mods.factorio.com/mod/AircraftRealism/discussion/613ecabbdddb521034eeb513)
+---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2021-08-07
   Bugfixes:
