--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.4
+Date: 2021-11-11
+  Changes:
+    - Updated to Aircraft 1.8 (removed shadowless version and make actual shadow invisible instead)
+---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: 2021-10-13
   Bugfixes:
