--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,11 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.3.4
+Version: 1.4.0
 Date: 2022-01-03
   Changes:
+    - Add support for Aircraft 1.8 (separate layers for plane and shadow)
     - By snouz: Optimized images losslessly with PNGGauntlet
+  Breaking changes:
+    - Minimum Aircraft version is now 1.8
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: 2021-10-13
