Add aircraft takeoff distance indicator
TODO:
- Calculation does not account for afterburner

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.1
+Date: 2022-02-24
+  Features:
+    - Add aircraft takeoff distance indicator
+---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2022-01-03
   Changes:
