--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ Version: 1.4.1
 Date: 2022-02-24
   Features:
     - Add aircraft takeoff distance indicator
+  Bugfixes:
+    - Fix some aircraft properties not being copied over on takeoff/landing
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2022-01-03
