--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,15 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.4.1
-Date: 2022-02-24
+Version: 1.4.2
+Date: 2022-10-22
   Features:
     - Add aircraft takeoff distance indicator
   Bugfixes:
     - Fix some aircraft properties not being copied over on takeoff/landing
+---------------------------------------------------------------------------------------------------
+Version: 1.4.1
+Date: 2022-06-29
+  Changes:
+    - Docs is not included as part of mod to fix error installing mod on Factorio Server Manager
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2022-01-03
