No longer include Docs/ in release
The example mod causes errors when trying to load it via Factorio Server
manager

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.1
+Date: 2022-06-29
+  Changes:
+    - Docs is not included as part of mod to fix error installing mod on Factorio Server Manager
+---------------------------------------------------------------------------------------------------
 Version: 1.4.0
 Date: 2022-01-03
   Changes:
