--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 1.4.2
 Date: 2022-10-22
   Features:
     - Add aircraft takeoff distance indicator
+    - Add animated shadows
   Bugfixes:
     - Fix some aircraft properties not being copied over on takeoff/landing
 ---------------------------------------------------------------------------------------------------
