Replace takeoff/landing speed with single transition speed
Having two separate speeds prevents the takeoff animations from lining up
together. It also removes the possibility for error if landing speed is set
above takeoff speed and reduces the number of settings for users to configure
(maybe good?)

For backwards compatibility, the setting is still called
aircraft-takeoff-speed-[plane-name].

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,8 @@ Date: 2022-10-22
   Features:
     - Add aircraft takeoff distance indicator
     - Add animated shadows
+  Changes:
+    - Planes now define a single speed (transition speed for takeoff and landing)
   Bugfixes:
     - Fix some aircraft properties not being copied over on takeoff/landing
 ---------------------------------------------------------------------------------------------------
