--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@ Date: 2022-10-22
     - Add animated shadows
   Changes:
     - Planes now define a single speed (transition speed for takeoff and landing)
+    - Remove setting "No airborne plane shadows"
   Bugfixes:
     - Fix some aircraft properties not being copied over on takeoff/landing
 ---------------------------------------------------------------------------------------------------
