Add option to make airborne aircraft immune to damage (#19)
Accomplished by hooking on_entity_damaged and adding health back when the plane
is damaged

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.1
+Date: 2022-11-26
+  Features:
+    - Add option to make airborne planes immune to damage
+---------------------------------------------------------------------------------------------------
 Version: 1.5.0
 Date: 2022-11-19
   Features:
