Cache plane data during runtime
Reduces UPS drain from unnecessary work

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.3
+Date: 2023-04-27
+  Changes:
+    - Cache plane data during runtime to reduce UPS drain
+---------------------------------------------------------------------------------------------------
 Version: 1.5.2
 Date: 2022-12-22
   Bugfixes:
