Fix gauges remaining after plane destroyed
on_player_driving_state_changed no longer gets called when the player's plane
gets destroyed. Thus we never delete the gauge. New solution is to check every
tick if the player is still in a plane and delete the gauge if they are not.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.4
+Date: 2023-05-27
+  Bugfixes:
+    - Fix gauges remaining after player plane is destroyed
+---------------------------------------------------------------------------------------------------
 Version: 1.5.3
 Date: 2023-04-27
   Changes:
