--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.5
+Date: 2023-06-10
+  Features:
+    - Add ability for planes to land on water
+---------------------------------------------------------------------------------------------------
 Version: 1.5.4
 Date: 2023-05-27
   Bugfixes:
