--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 Version: 1.5.6
 Date: 2023-11-22
   Changes:
-    - Added events on entity creation and destruction which other mods can subscribe to
+    - Added events on entity creation and destruction events when plane transitions between airborne and grounded which other mods can subscribe to
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.5
 Date: 2023-06-10
