--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.7
+Date: 2024-05-02
+  Features:
+    - Add official support for multi-file shadows
+    - Add ability for aircraft authors to set aircraft max speed
+    - Add reasonable speed limits to aircraft
+  Changes:
+    - Lower takeoff speed of jet
+    - Low fuel warning does not sound if plane is stationary or reversing
+---------------------------------------------------------------------------------------------------
 Version: 1.5.6
 Date: 2023-11-22
   Changes:
