--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.5.8
+Date: 2024-07-26
+  Changes:
+    - Plane riding_state (turning, acceleration, braking) is maintained after takeoff/landing
+---------------------------------------------------------------------------------------------------
 Version: 1.5.7
 Date: 2024-05-02
   Features:
