--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.2
+Date: 2024-12-10
+  Changes:
+    - Fix plane not being minable
+---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 2024-11-30
+  Features:
+    - Update collision detection for Factorio 2.0
   Changes:
     - Driver exiting airborne plane no longer destroys plane
     - Plane can be exited while moving
