--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.0.3
+Date: 2025-01-25
+  Changes:
+    - Hide internal data in factoriopedia
+    - Fix crash if plane equipment grid has ghost equipment
+    - Fix equipment grid GUI not remaining opened between takeoff/landing
+---------------------------------------------------------------------------------------------------
 Version: 2.0.2
 Date: 2024-12-10
   Changes:
